# rent_radar

./: .env.example  .gitignore  ARCHITECTURE.md  LICENSE  README.md  check_health.py  debug_meli_selectors.py  detect_events.py  generar_mapa.py  geocode_fallback.py  main.py  mapa.html  notify.py  pipeline.py  prune_snapshots.py  pyproject.toml  requirements.txt  run_dashboard.py  run_dbt.py  run_ingest.py
analytics/: dbt_project.yml
analytics/macros/: distancia.sql
analytics/models/gold/: candidatas.sql  metricas.sql  objetivo.sql
analytics/models/silver/: publicaciones.sql  publicaciones_rechazadas.sql
app/: config.py  db.py  models.py  telegram.py
spiders/: __init__.py  argenprop.py  mercadolibre.py  zonaprop.py
sql/: 001_init_schemas.sql  002_silver_events.sql  003_health_alerts.sql  004_property_flags.sql  005_coordenadas_override.sql  006_coordenadas_no_resueltas.sql  007_snapshots_fecha_index.sql
systemd/: prefect-server.service  prefect-worker.service  rent-radar-map.service
temp_html/: argenprop.html  mercadolibre.html  zonaprop.html
