[project]
name = "rent-radar"
version = "1.9"
description = "Sistema automatizado de monitoreo de alquileres en portales inmobiliarios argentinos"
requires-python = ">=3.13"
dependencies = [
    "python-dotenv>=0.19.0",
    "prefect>=2.0",
    "pydantic>=2.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "curl-cffi>=0.7.0",
    "playwright>=1.74.0",
    "playwright-stealth>=1.0.6",
    "psycopg2-binary>=2.9",
    "dbt-postgres>=1.8",
]

[project.optional-dependencies]
dev = []

[project.scripts]
rent-radar = "main:main"

[tool.setuptools.packages.find]
include = ["app*", "spiders*"]
